--- a/less/select.less
+++ b/less/select.less
@@ -19,7 +19,7 @@
 @select-input-border-radius:       4px;
 @select-input-border-focus:        @select-primary-color;
 @select-input-border-width:        1px;
-@select-input-height:              36px;
+@select-input-height:              27px;
 @select-input-internal-height:     (@select-input-height - (@select-input-border-width * 2));
 @select-input-placeholder:         #aaa;
 @select-text-color:                #333;
@@ -30,7 +30,7 @@
 
 // menu options
 @select-menu-zindex:               1;
-@select-menu-max-height:           200px;
+@select-menu-max-height:           250px;
 
 @select-option-color:              lighten(@select-text-color, 20%);
 @select-option-bg:                 @select-input-bg;
@@ -51,7 +51,7 @@
 @select-clear-width:               (@select-input-internal-height / 2);
 
 // arrow indicator
-@select-arrow-color:               #999;
+@select-arrow-color:               #ccc;
 @select-arrow-color-hover:         #666;
 @select-arrow-width:               5px;
 
