--- a/less/menu.less
+++ b/less/menu.less
@@ -17,12 +17,15 @@
 	box-shadow: 0 1px 0 rgba(0, 0, 0, 0.06);
 	box-sizing: border-box;
 	margin-top: -1px;
-	max-height: @select-menu-max-height;
 	position: absolute;
 	top: 100%;
 	width: 100%;
 	z-index: @select-menu-zindex;
 	-webkit-overflow-scrolling: touch;
+
+	.Select--multi & {
+		border-top: none;
+	}
 }
 
 
