adjust flexbox settings so the drop down arrow is always visible

--- a/less/control.less
+++ b/less/control.less
@@ -86,7 +86,7 @@
 // placeholder
 .Select-placeholder,
 .Select-value {
-	flex: 1 0 auto;
+	flex: 1 1 auto;
 
 	line-height: @select-input-internal-height;
 	padding-left: @select-padding-horizontal;
@@ -211,6 +211,7 @@
 	align-self: stretch;
 	border-left: 1px solid #ccc;
 	background: #eee;
+  flex: 0 0 20px;
 
 	.is-open & {
 		background: none;
