cursor: pointer on select control

--- a/less/control.less
+++ b/less/control.less
@@ -53,7 +53,7 @@
 	border-radius: @select-input-border-radius;
 	border: @select-input-border-width solid @select-input-border-color;
 	color: @select-text-color;
-	cursor: default;
+	cursor: pointer;
 	border-spacing: 0;
 	border-collapse: separate;
 	height: @select-input-height;
